--- a/08_Canvas_hard/index.html
+++ b/08_Canvas_hard/index.html
@@ -9,12 +9,17 @@
     <title></title>
     <link href="css/style_general.css" rel="stylesheet">
     <link href="css/style_home.css" rel="stylesheet">
+    <link href="css/watch_animation.css" rel="stylesheet">
     <script src="js/jquery-1.8.1.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.ui.touch-punch.min.js"></script>
     <script>
         $(function () {
-
+            $('.canvas_area').on('click', function() {
+                // Animation for watch hands
+                $('.arr_hour').toggleClass('hours');
+                $('.arr_minute').toggleClass('minutes');
+            });
         });
     </script>
 </head>
